// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter has an initial count of 0 1`] = `
<Counter
  count={0}
>
  <div
    className="counter"
  >
    <div
      className="count"
    >
      <h2>
        Counter
      </h2>
      0
    </div>
    <div
      className="mutate-count"
    >
      <Button
        className="increment-btn"
      >
        <button
          style={
            Object {
              "margin": "5%",
            }
          }
        >
          Increment
        </button>
      </Button>
      <Button
        className="decrement-btn"
      >
        <button
          style={
            Object {
              "margin": "5%",
            }
          }
        >
          Decrement
        </button>
      </Button>
      <Button
        className="async-increment"
      >
        <button
          style={
            Object {
              "margin": "5%",
            }
          }
        >
          Async Increment
        </button>
      </Button>
      <Button
        className="async-decrement"
      >
        <button
          style={
            Object {
              "margin": "5%",
            }
          }
        >
          Async Decrement
        </button>
      </Button>
    </div>
  </div>
</Counter>
`;

exports[`Counter renders properly 1`] = `
<div
  className="counter"
>
  <div
    className="count"
  >
    <h2>
      Counter
    </h2>
  </div>
  <div
    className="mutate-count"
  >
    <Button
      className="increment-btn"
    >
      Increment
    </Button>
    <Button
      className="decrement-btn"
    >
      Decrement
    </Button>
    <Button
      className="async-increment"
    >
      Async Increment
    </Button>
    <Button
      className="async-decrement"
    >
      Async Decrement
    </Button>
  </div>
</div>
`;
